# Logic_gate_sim

./: CMakeLists.txt  README.md  main.cpp
include/: AND.h  Command.h  Gate.h  GateGenerator.h  NOT.h  Node.h  OR.h  Simulation.h  XOR.h  helperfunctions.h  logic_simulator.h
src/: Command.cpp  Gate.cpp  GateGenerator.cpp  Node.cpp  Simulation.cpp  helperfunctions.cpp
